--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html data-theme="cerberus" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/tomlogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte</title>
+    <title>Tom Hillman</title>
   </head>
   <body>
     <div id="app"></div>
